# dynamicIP_discordBot

./: .gitignore  CMakeLists.txt  README.md  config.json
cmake/: FindDPP.cmake
src/: main.cpp  serverI.cpp  serverI.h
